--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign-Up-Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main">
+        <div class="main1">
+            <h1>g</h1>
+        </div>
+        <div class="main2">
+            <div class="first">
+                Hi
+            </div>
+            <div class="second">
+                Hellow
+            </div>
+            <div class="third">
+                Hey
+            </div>
+        </div>
+    </div>
 </body>
 </html>
