--- a/index.html
+++ b/index.html
@@ -8,20 +8,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
-        <div class="main1">
-            <h1>g</h1>
-        </div>
-        <div class="main2">
-            <div class="first">
-                Hi
+    <div class="container">
+        <div class="left"></div>
+        <div class="right">
+            <div class="right-1">
+                <h4>This is not a real online service! You know you need something<br/> 
+                    like this in your life to help your realize your deepest dreams.<br/>
+                    Sign up <em>now</em> to get started.<br/><br/>
+                    
+                    Your <em>Know</em> you want to.
+                </h4>
             </div>
-            <div class="second">
-                Hellow
+            <div class="right-2">
+                <div class="title">
+                    <h4>Let's do this!</h4>
+                </div>
+                <form action="#" method="get">
+                    <div class="user-details">
+                        <div class="input-box">
+                            <span class="detail">First Name</span>
+                            <input type="text" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="detail">Last Name</span>
+                            <input type="text" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="detail">Email</span>
+                            <input type="email" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="detail">Phone Number</span>
+                            <input type="tel" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="detail">Password</span>
+                            <input type="password" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="detail">Confirm Password</span>
+                            <input type="password" required>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="third">
-                Hey
-            </div>
+            <div class="right-3"></div>
         </div>
     </div>
 </body>
