--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <div class="left"></div>
         <div class="right">
             <div class="right-1">
-                <h4>This is not a real online service! You know you need something<br/> 
+                <span class="title">This is not a real online service! You know you need something <br/>
                     like this in your life to help your realize your deepest dreams.<br/>
                     Sign up <em>now</em> to get started.<br/><br/>
                     
                     Your <em>Know</em> you want to.
-                </h4>
+                </span>
             </div>
             <div class="right-2">
                 <div class="title">
-                    <h4>Let's do this!</h4>
+                    <span class="title-2">Let's do this!</span>
                 </div>
                 <form action="#" method="get">
                     <div class="user-details">
@@ -49,6 +49,14 @@
                             <span class="detail">Confirm Password</span>
                             <input type="password" required>
                         </div>
+                    </div>
+                    <div class="button">
+                        <input type="submit" value="Create Account">
+                    </div>
+                    <div class="last-para">
+                        <span class="line-text">
+                            Already have an account? <a href="#">Login</a>
+                        </span>
                     </div>
                 </form>
             </div>
