edited the right-side

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <div class="left"></div>
+        <div class="left">
+            <div class="uper">
+                <div></div>
+            </div>
+            <div class="left-bottom">
+                <span class="bottom-text">Created by "Nicolas"</span>
+            </div>
+        </div>
         <div class="right">
             <div class="right-1">
                 <span class="title">This is not a real online service! You know you need something <br/>
@@ -27,19 +34,19 @@
                     <div class="user-details">
                         <div class="input-box">
                             <span class="detail">First Name</span>
-                            <input type="text" required>
+                            <input type="text" placeholder="" required>
                         </div>
                         <div class="input-box">
                             <span class="detail">Last Name</span>
-                            <input type="text" required>
+                            <input type="text" placeholder="" required>
                         </div>
                         <div class="input-box">
                             <span class="detail">Email</span>
-                            <input type="email" required>
+                            <input type="email" placeholder="" required>
                         </div>
                         <div class="input-box">
                             <span class="detail">Phone Number</span>
-                            <input type="tel" required>
+                            <input type="tel" placeholder="" required>
                         </div>
                         <div class="input-box">
                             <span class="detail">Password</span>
