--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="container">
         <div class="left">
             <div class="uper">
-                <div></div>
+                <div class="logo">
+                    <img src="/images/odin-lined.png" alt="odin-logo">
+                    <span class="logo-text">ODIN</span>
+                </div>
             </div>
             <div class="left-bottom">
                 <span class="bottom-text">Created by "Nicolas"</span>
@@ -62,7 +65,7 @@
                     </div>
                     <div class="last-para">
                         <span class="line-text">
-                            Already have an account? <a href="#">Login</a>
+                            Already have an account? <a style="color: rgb(20, 116, 20); font-weight: bolder; text-decoration: none;" href="#">Log in</a>
                         </span>
                     </div>
                 </form>
