fixed image bug

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="left">
             <div class="uper">
                 <div class="logo">
-                    <img src="/images/odin-lined.png" alt="odin-logo">
+                    <img src="images/odin-lined.png" alt="odin-logo">
                     <span class="logo-text">ODIN</span>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="last-para">
                         <span class="line-text">
-                            Already have an account? <a style="color: rgb(20, 116, 20); font-weight: bolder; text-decoration: none;" href="#">Log in</a>
+                            Already have an account? <a style="color: rgb(122, 194, 122); font-weight: bolder; text-decoration: none;" href="#">Log in</a>
                         </span>
                     </div>
                 </form>
