--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="left-bottom">
-                <span class="bottom-text">Created by "Nicolas"</span>
+                <span class="bottom-text">Created by "<u> Nicolas </u>"</span>
             </div>
         </div>
         <div class="right">
