--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <script src="/scrip.js"></script>
+    <script src="scrip.js"></script>
 
     <div class="container">
         <div class="left">
